--- a/src/components/Categories/categories.style.css
+++ b/src/components/Categories/categories.style.css
@@ -5,9 +5,7 @@
   margin-bottom: 3rem;
   gap: 10px;
 }
-.categories :hover {
-  background-color: #d796346e;
-}
+
 .category {
   display: flex;
   flex-direction: row;
@@ -15,29 +13,34 @@
   border: 1px solid #d79734;
   background-color: #474747;
   color: #d79734;
-  border-radius: 8px;
+  border-radius: 5px;
   width: 100%;
   padding: 5px;
 }
 
-.container {
-}
-.wrapper {
-  display: flex;
-  flex-direction: column;
-}
-
 .recipes {
   display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  padding-left: 30%;
+  padding-right: 30%;
 }
 
-.recipe {
-}
-.img {
+.imgCategory {
   height: 300px;
   width: 300px;
   border-radius: 10px;
-  overflow: hidden;
-  transition: 150ms;
+}
+
+h4 {
+  color: rgb(241, 187, 6);
+}
+
+.h3Link {
+  color: orange;
+}
+
+.imgCategory :hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 20px rgba(255, 217, 0, 0.5);
 }
