--- a/src/components/Layout/layout.style.css
+++ b/src/components/Layout/layout.style.css
@@ -13,6 +13,7 @@ header,
 footer {
   background-color: rgb(202, 139, 21);
   width: 100%;
+  border-radius: 10px;
 }
 
 nav {
@@ -29,9 +30,19 @@ footer {
 
 .Logo {
   width: 200px;
+  border: 3px solid black;
+  border-radius: 10px;
+  padding: 10px;
+}
+header {
+  height: 130px;
 }
 
-.link {
+.link2 {
   color: black;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  text-decoration: underline;
+}
+.link2:hover {
+  color: rgb(204, 45, 45);
 }
