--- a/src/components/Home/home.style.css
+++ b/src/components/Home/home.style.css
@@ -4,13 +4,17 @@
   border-radius: 20px;
   border: 2px solid orange;
 }
-.container3 {
-  width: 60%;
+
+.containerHome {
+  display: flex;
+  width: 80%;
+  padding-left: 7%;
 }
 
-.wrapper2 {
+.wrapperHome {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
 }
 
 .h2-Home {
@@ -19,10 +23,21 @@
 }
 
 .information {
-  padding-top: 50%;
+  padding-top: 40%;
+  padding-left: 60px;
 }
 .para-home {
   border: 2px solid orange;
   border-radius: 10px;
   padding: 20px;
+}
+
+.randomMeal {
+  padding-top: 25%;
+}
+.imgLinkHome {
+  width: 400px;
+  height: 400px;
+  border-radius: 10px;
+  border: 2px solid orange;
 }
