--- a/src/components/Categories/categories.style.css
+++ b/src/components/Categories/categories.style.css
@@ -26,8 +26,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
-  padding-left: 30%;
-  padding-right: 30%;
+  width: 75%;
 }
 
 .imgLink {
