--- a/src/components/Categories/categories.style.css
+++ b/src/components/Categories/categories.style.css
@@ -1,5 +1,6 @@
 .categories {
   display: flex;
+  padding-left: 35%;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 3rem;
@@ -51,4 +52,21 @@ h4 {
 .imgContainer :hover {
   transform: scale(1.05);
   box-shadow: 0 0 20px rgba(255, 217, 0, 0.5);
+}
+
+.containerCat {
+  min-height: calc(100vh - 60px);
+  width: 75%;
+  margin-top: 3.5rem;
+}
+
+.wrapperCat {
+  height: 100%;
+  width: 100%;
+  padding-bottom: 2.5rem;
+}
+.h2-Cat {
+  display: flex;
+  padding-left: 59.5%;
+  color: orange;
 }
