--- a/src/components/Search/searchBar.style.css
+++ b/src/components/Search/searchBar.style.css
@@ -12,3 +12,15 @@
   height: 40px;
   font-size: 20px;
 }
+
+.containerSearch {
+  min-height: calc(100vh - 60px);
+  width: 75%;
+  margin-top: 3.5rem;
+}
+
+.wrapperSearch {
+  height: 100%;
+  width: 100%;
+  padding-bottom: 2.5rem;
+}
