--- a/src/components/Categories/categories.style.css
+++ b/src/components/Categories/categories.style.css
@@ -1,8 +1,8 @@
 .categories {
   display: flex;
-  padding-left: 35%;
+  padding-left: 27%;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   margin-bottom: 3rem;
   gap: 10px;
 }
