--- a/src/components/Categories/categories.style.css
+++ b/src/components/Categories/categories.style.css
@@ -1,10 +1,11 @@
 .categories {
   display: flex;
-  padding-left: 27%;
-  align-items: center;
-  justify-content: center;
+  padding-left: 25%;
   margin-bottom: 3rem;
+  margin: auto;
   gap: 10px;
+  max-width: 2000px;
+  padding-bottom: 20px;
 }
 .category:hover {
   background-color: #d4891896;
@@ -19,15 +20,17 @@
   background-color: #474747;
   color: #d79734;
   border-radius: 5px;
-  width: 100%;
-  padding: 5px;
 }
 
 .recipes {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 20px;
-  width: 75%;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 3rem;
+}
+.recipe {
+  padding: 10px;
 }
 
 .imgLink {
@@ -43,6 +46,7 @@ h4 {
 
 .h3Link {
   color: orange;
+  max-height: 20px;
 }
 
 .h3Link:hover {
@@ -55,24 +59,21 @@ h4 {
 }
 
 .containerCat {
-  min-height: calc(100vh - 60px);
-  width: 75%;
   margin-top: 3.5rem;
+  padding-right: 18%;
 }
 
 .wrapperCat {
-  height: 100%;
-  width: 100%;
   padding-bottom: 2.5rem;
 }
 .h2-Cat {
   display: flex;
-  padding-left: 59.5%;
+  padding-left: 60%;
   color: orange;
 }
 
 .Buttons {
-  padding-left: 30%;
+  padding-left: 20%;
 }
 
 .active {
