--- a/src/components/siteStructure/categories.style.css
+++ b/src/components/siteStructure/categories.style.css
@@ -1,6 +1,11 @@
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 .categories {
   display: flex;
-  padding-left: 25%;
   margin-bottom: 3rem;
   margin: auto;
   gap: 10px;
@@ -58,22 +63,26 @@ h4 {
   box-shadow: 0 0 20px rgba(255, 217, 0, 0.5);
 }
 
-.containerCat {
+.container {
+  display: grid;
+  padding-left: 15%;
   margin-top: 3.5rem;
   padding-right: 18%;
 }
 
-.wrapperCat {
+.wrapper {
   padding-bottom: 2.5rem;
 }
 .h2-Cat {
   display: flex;
-  padding-left: 60%;
+  padding-left: 20%;
+  width: 300px;
   color: orange;
 }
 
 .Buttons {
-  padding-left: 20%;
+  margin-top: -30px;
+  margin-bottom: 20px;
 }
 
 .active {
